# ror-updater

./: .gitignore  AssemblyInfo.cs.in  CMakeLists.txt  LICENSE.rtf  RoR_Online_Setup.iss  SharedClasses.cs  backup.txt  ror-updater.sln  updater.ini
Client/: App.xaml.cs  CMakeLists.txt  Settings.cs  Utils.cs  app.manifest  install.cmake  packages.config  ror-updater.csproj
Client/Pages/: MainPage.xaml  MainPage.xaml.cs  UpdateDonePage.xaml.cs  UpdatePage.xaml.cs
Client/Properties/: AssemblyInfo.cs  Resources.resx.in
ListGenerator/: CMakeLists.txt  Program.cs
SelfUpdater/: CMakeLists.txt  Program.cs  selfupdate.csproj
Server/: MainWindow.cs  Program.cs  ror-updater-list_maker.csproj
Server/Properties/: AssemblyInfo.cs  Settings.Designer.cs
Shared/: SharedClasses.cs
list-generator/: Program.cs
ror-updater/: App.xaml.cs  Utils.cs  packages.config  ror-updater.csproj
ror-updater-list_maker/: MainWindow.cs  ror-updater-list_maker.csproj
ror-updater-list_maker/Properties/: Resources.Designer.cs
ror-updater/Pages/: ChoicePage.xaml.cs  MainPage.xaml.cs  UpdatePage.xaml.cs
ror_updater_selfupdate/: Program.cs  ror_updater_selfupdate.csproj
ror_updater_selfupdate/Properties/: AssemblyInfo.cs
